--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <!-- 配置meta标签,实现移动端适配. 告知浏览器如何规范的渲染web页面[视图的大小] -->
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>vue实战_欢迎随时指正</title>
 </head>
